<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aungmyokyaw.inventoryapp.EditItem">

    <LinearLayout
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/product_image"
            android:padding="22dp"
            android:src="@drawable/ic_add_a_photo_white_24dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="text"/>
            <EditText
                android:id="@+id/product_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_model"
                android:inputType="text"/>
            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_quantity"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product">
        <EditText
            android:id="@+id/supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name"
            android:inputType="text"/>
        <EditText
            android:id="@+id/supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_phone"
            android:inputType="phone"/>
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/supplier"/>

</android.support.constraint.ConstraintLayout>
